--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-16.69MB/s(Youtube:不良林), server: 3.2.1.fuckppppp.today, port: 60302, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.30MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.69MB/s(Youtube:不良林), server: w11.udpgw.com, port: 443, type: trojan, password: f64e69c0-e7b7-11ec-ab81-1239d0255272, sni: w11.udpgw.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.90MB/s(Youtube:不良林), server: ga.gnailiad.ga, port: 2443, type: vmess, uuid: 5b6fd9e2-0bf7-4eee-92d6-21b7bdae7062, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.14MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-3.75MB/s(Youtube:不良林), server: 213.183.59.214, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇳🇱 荷兰-239.9KB/s(Youtube:不良林), server: 213.183.59.206, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
-  - {name: 🇳🇱 荷兰-1.92MB/s(Youtube:不良林), server: 213.183.59.206, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
-  - {name: 🇳🇱 荷兰-673.0KB/s(Youtube:不良林), server: 213.183.59.211, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇳🇱 荷兰-2.77MB/s(Youtube:不良林), server: 213.183.59.214, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 🇳🇱 荷兰-3.22MB/s(Youtube:不良林), server: 213.183.59.214, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇨🇳 中国-7.24MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-3.29MB/s(Youtube:不良林), server: 213.183.59.214, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 🇺🇸 美国-3.36MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
+  - {name: 🇷🇺 俄罗斯联邦-395.6KB/s(Youtube:不良林), server: 213.183.53.208, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇩🇪 德国-1.08MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇨🇳 中国-2.43MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.18MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-16.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.75MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-239.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.92MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-673.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.77MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-395.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.18MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-16.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.75MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-239.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.92MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-673.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.77MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-395.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.18MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-16.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.75MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-239.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.92MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-673.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.77MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-395.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.18MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-16.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.75MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-239.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.92MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-673.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.77MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-395.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.18MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-16.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.75MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-239.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.92MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-673.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.77MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-395.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.18MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-16.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.75MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-239.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.92MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-673.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.77MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-395.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.18MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-16.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.75MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-239.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.92MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-673.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.77MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-395.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.18MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
