--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.14MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-3.22MB/s(Youtube:不良林), server: 213.183.59.214, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇨🇳 中国-7.24MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-3.29MB/s(Youtube:不良林), server: 213.183.59.214, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 🇺🇸 美国-3.36MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
-  - {name: 🇷🇺 俄罗斯联邦-395.6KB/s(Youtube:不良林), server: 213.183.53.208, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇩🇪 德国-1.08MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇨🇳 中国-2.43MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.18MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.92MB/s(Youtube:不良林), server: 213.183.59.206, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇺🇸 美国-326.8KB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-350.7KB/s(Youtube:不良林), server: 213.183.59.214, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇷🇺 俄罗斯联邦-290.4KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇯🇵 日本-5.22MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.50MB/s(Youtube:不良林), server: 36.139.154.148, port: 2406, type: vmess, uuid: 6861c307-5efd-3b8a-b7fa-248ad8dde74e, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: 36.139.154.148}}
+  - {name: 伊朗-5.25MB/s(Youtube:不良林), server: de.v2yyds.com, port: 32912, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: de.v2yyds.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.61MB/s(Youtube:不良林), server: 67us01.fans8.xyz, port: 443, type: trojan, password: 6f5e02bd-9b8f-44bc-b681-55150c102911, sni: 67us01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-367.4KB/s(Youtube:不良林), server: us.v2yyds.cc, port: 32911, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: us.v2yyds.cc, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-5.36MB/s(Youtube:不良林), server: us.v2yyds.cc, port: 32912, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: us.v2yyds.cc, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-395.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-326.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-350.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-290.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
+      - 伊朗-5.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-367.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.36MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-395.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-326.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-350.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-290.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
+      - 伊朗-5.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-367.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.36MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-395.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-326.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-350.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-290.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
+      - 伊朗-5.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-367.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.36MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-395.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-326.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-350.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-290.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
+      - 伊朗-5.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-367.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.36MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-395.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-326.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-350.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-290.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
+      - 伊朗-5.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-367.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.36MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-395.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-326.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-350.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-290.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
+      - 伊朗-5.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-367.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.36MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-395.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-326.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-350.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-290.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
+      - 伊朗-5.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-367.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.36MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
