--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-1.92MB/s(Youtube:不良林), server: 213.183.59.206, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
-  - {name: 🇺🇸 美国-326.8KB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-350.7KB/s(Youtube:不良林), server: 213.183.59.214, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇷🇺 俄罗斯联邦-290.4KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇯🇵 日本-5.22MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.50MB/s(Youtube:不良林), server: 36.139.154.148, port: 2406, type: vmess, uuid: 6861c307-5efd-3b8a-b7fa-248ad8dde74e, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: 36.139.154.148}}
-  - {name: 伊朗-5.25MB/s(Youtube:不良林), server: de.v2yyds.com, port: 32912, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: de.v2yyds.com, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.77MB/s(Youtube:不良林), server: w12.udpgw.com, port: 443, type: trojan, password: 08964210-e7b8-11ec-95aa-1239d0255272, sni: w12.udpgw.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.01MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-176.2KB/s(Youtube:不良林), server: w11.udpgw.com, port: 443, type: trojan, password: f64e69c0-e7b7-11ec-ab81-1239d0255272, sni: w11.udpgw.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-16.42MB/s(Youtube:不良林), server: 3.2.1.fuckppppp.today, port: 60302, type: vmess, uuid: 0f62bb1b-dd16-3bb2-a435-c13e068b0955, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-918.4KB/s(Youtube:不良林), server: 213.183.59.206, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇨🇳 中国-9.44MB/s(Youtube:不良林), server: 36.139.166.64, port: 2601, type: vmess, uuid: 6861c307-5efd-3b8a-b7fa-248ad8dde74e, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: 36.139.166.64}}
+  - {name: 伊朗-191.3KB/s(Youtube:不良林), server: de.v2yyds.com, port: 32912, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: de.v2yyds.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.61MB/s(Youtube:不良林), server: 67us01.fans8.xyz, port: 443, type: trojan, password: 6f5e02bd-9b8f-44bc-b681-55150c102911, sni: 67us01.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-367.4KB/s(Youtube:不良林), server: us.v2yyds.cc, port: 32911, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: us.v2yyds.cc, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-5.42MB/s(Youtube:不良林), server: us.v2yyds.cc, port: 32911, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: us.v2yyds.cc, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-5.36MB/s(Youtube:不良林), server: us.v2yyds.cc, port: 32912, type: trojan, password: 90a0dcfe-f7bc-49ba-a72d-762959a03c9f, sni: us.v2yyds.cc, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-326.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-350.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-290.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
-      - 伊朗-5.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-176.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.42MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-918.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.44MB/s(Youtube:不良林)
+      - 伊朗-191.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-367.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.42MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-5.36MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-326.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-350.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-290.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
-      - 伊朗-5.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-176.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.42MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-918.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.44MB/s(Youtube:不良林)
+      - 伊朗-191.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-367.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.42MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-5.36MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-326.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-350.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-290.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
-      - 伊朗-5.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-176.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.42MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-918.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.44MB/s(Youtube:不良林)
+      - 伊朗-191.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-367.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.42MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-5.36MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-326.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-350.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-290.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
-      - 伊朗-5.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-176.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.42MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-918.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.44MB/s(Youtube:不良林)
+      - 伊朗-191.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-367.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.42MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-5.36MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-326.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-350.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-290.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
-      - 伊朗-5.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-176.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.42MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-918.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.44MB/s(Youtube:不良林)
+      - 伊朗-191.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-367.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.42MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-5.36MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-326.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-350.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-290.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
-      - 伊朗-5.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-176.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.42MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-918.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.44MB/s(Youtube:不良林)
+      - 伊朗-191.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-367.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.42MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-5.36MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-326.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-350.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-290.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
-      - 伊朗-5.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-176.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.42MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-918.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.44MB/s(Youtube:不良林)
+      - 伊朗-191.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-367.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-5.42MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-5.36MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
